--- a/src/sa_web/static/sass/default.sass
+++ b/src/sa_web/static/sass/default.sass
@@ -605,7 +605,7 @@ img
 
 
 #site-header
-  background: url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/lightpaperfibers.png)
+  background: url(images/lightpaperfibers.png)
   position: relative
   z-index: 99
   padding: 0.5em
@@ -636,7 +636,7 @@ img
 // Navigation Button - Selectors
 
 #nav-btn
-  background: url(//subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/lightpaperfibers.png)
+  background: url(images/lightpaperfibers.png)
   color: #bbb
   font-size: 2em
   line-height: 1
@@ -782,7 +782,7 @@ a.logout-btn
 // Add Place Button - Selectors
 
 #add-place-btn-container
-  background: url(//subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/lightpaperfibers.png)
+  background: url(images/lightpaperfibers.png)
   padding: 0.5em 0.5em 0.75em
   position: relative
   z-index: 30
@@ -1269,7 +1269,7 @@ a.auth-inline
 
 
 #ticker
-  background: url(//subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/lightpaperfibers.png)
+  background: url(images/lightpaperfibers.png)
   z-index: 30
   display: none
   p
@@ -1644,7 +1644,7 @@ ul.recent-points
 
 #geocode-address-bar
   display: none
-  background: url(//subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/lightpaperfibers.png)
+  background: url(images/lightpaperfibers.png)
   position: relative
   z-index: 40
   padding: 0.75em 0.5em 0.5em
@@ -1907,7 +1907,7 @@ a.close-unsupported-overlay
     content: "desktop"
   // Header
   #site-header
-    background: url("//subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/lightpaperfibers.png")
+    background: url(images/lightpaperfibers.png)
     padding-left: 1em
     overflow: visible
     height: 4em
@@ -1985,7 +1985,7 @@ a.close-unsupported-overlay
     position: relative
     z-index: 3
   .sign-in-menu
-    background: url("//subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/lightpaperfibers.png")
+    background: url(images/lightpaperfibers.png)
     border-radius: 3px
     box-shadow: -0.25em 0.25em 0 $opacity-low-black
     width: 18em
@@ -2218,7 +2218,7 @@ a.close-unsupported-overlay
   // Footer
   #colophon
     color: $button-background-blue
-    background: url("//subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/lightpaperfibers.png")
+    background: url(images/lightpaperfibers.png)
     font-size: 1em
     position: absolute
     top: auto
