fix bug in content visible width on flavors with no activity enabled

--- a/src/sa_web/static/sass/default.sass
+++ b/src/sa_web/static/sass/default.sass
@@ -2075,6 +2075,7 @@ a.close-unsupported-overlay
     //left: 40%;
     overflow: visible
     box-shadow: -0.325em 0 0 $opacity-very-low-black
+    width: $content-visible-width
   .activity-enabled #content
     left: $content-visible-left-offset
     width: $content-visible-width
