add basic story navigation feature to place detail views, controlled by a new object in the config

--- a/src/sa_web/static/sass/_buttons.sass
+++ b/src/sa_web/static/sass/_buttons.sass
@@ -219,3 +219,31 @@
   &:hover
     color: $selected-highlight-orange
     cursor: pointer
+
+/* Story bar styles */
+
+.btn-previous-story-nav
+  color: white
+  cursor: pointer
+  float: left
+  width: 10%
+  &:before
+    font-size: 1.3em
+    content: $button-left-arrow
+  &:hover
+    color: $button-background-hover-blue
+  
+.btn-next-story-nav
+  color: white
+  cursor: pointer
+  float: right
+  width: 10%
+  text-align: right
+  &:before
+    font-size: 1.3em
+    content: $button-right-arrow
+  &:hover
+    color: $button-background-hover-blue
+
+.story-nav-disabled
+  visibility: hidden
