--- a/src/sa_web/static/sass/_content.sass
+++ b/src/sa_web/static/sass/_content.sass
@@ -250,3 +250,19 @@ a.auth-inline
   font-weight: bold
   text-decoration: none
   padding: 0.25em 0.5em
+
+/* place detail view story bar */
+.place-story-bar
+  background-color: $button-background-lightblue
+  padding: 8px
+  border-radius: 3px
+  margin-top: 10px
+  margin-bottom: 20px
+  font-family: FontAwesome
+  overflow: hidden
+  h5
+    float: left
+    width: 80%
+    font-family: $default-font-family
+    display: inline
+    margin-bottom: 0
