add basic story navigation feature to place detail views, controlled by a new object in the config

--- a/src/sa_web/static/scss/_variables.scss
+++ b/src/sa_web/static/scss/_variables.scss
@@ -10,16 +10,18 @@ $default-font-family: "Roboto", sans-serif;
 $border-color-lightgrey: #eeeeee;
 
 // Buttons - Variables
-$button-background-blue: #007fbf;
-$button-background-hover-blue: #93b7c9;
-$button-background-lightblue: #a3c7d9;
-$button-color-white: #fff;
-$button-primary-background-orange: rgba(242, 82, 24, 0.89);
-$opacity-lowest-black: rgba(0, 0, 0, 0.05);
-$opacity-very-low-black: rgba(0, 0, 0, 0.1);
-$opacity-low-black: rgba(0, 0, 0, 0.2);
-$opacity-med-black: rgba(0, 0, 0, 0.5);
-$opacity-med-high-white: rgba(255, 255, 255, 0.75);
+$button-background-blue: #007fbf
+$button-background-hover-blue: #93b7c9
+$button-background-lightblue: #a3c7d9
+$button-color-white: #fff
+$button-primary-background-orange: rgba(242, 82, 24, 0.89)
+$opacity-lowest-black: rgba(0, 0, 0, 0.05)
+$opacity-very-low-black: rgba(0, 0, 0, 0.1)
+$opacity-low-black: rgba(0, 0, 0, 0.2)
+$opacity-med-black: rgba(0, 0, 0, 0.5)
+$opacity-med-high-white: rgba(255, 255, 255, 0.75)
+$button-left-arrow: '\f060'
+$button-right-arrow: '\f061'
 
 // Forms - Variables
 
