Update compass config to work with multiple Sass files
 - This is just a temporary solution until we integrate our Sass compiler into Django

--- a/src/sa_web/static/sass/default.sass
+++ b/src/sa_web/static/sass/default.sass
@@ -1,15 +1,15 @@
-@import "variables"
-@import "basic"
-@import "buttons"
-@import "forms"
-@import "header"
-@import "map"
-@import "content"
-@import "sidebar"
-@import "ticker"
-@import "legend"
-@import "listview"
-@import "counter"
-@import "geocode"
-@import "footer"
-@import "media"
+@import "_variables"
+@import "_basic"
+@import "_buttons"
+@import "_forms"
+@import "_header"
+@import "_map"
+@import "_content"
+@import "_sidebar"
+@import "_ticker"
+@import "_legend"
+@import "_listview"
+@import "_counter"
+@import "_geocode"
+@import "_footer"
+@import "_media"
