use table layout for story navigation bar

--- a/src/sa_web/static/sass/_content.sass
+++ b/src/sa_web/static/sass/_content.sass
@@ -260,9 +260,9 @@ a.auth-inline
   margin-bottom: 20px
   font-family: FontAwesome
   overflow: hidden
-  h5
-    float: left
+  .story-tagline
     width: 80%
+    padding-left: 10px
+    padding-right: 10px
     font-family: $default-font-family
-    display: inline
     margin-bottom: 0
