use table layout for story navigation bar

--- a/src/sa_web/static/sass/_buttons.sass
+++ b/src/sa_web/static/sass/_buttons.sass
@@ -222,6 +222,7 @@
 
 /* Story bar styles */
 .btn-previous-story-nav
+  width: 10%
   color: white
   cursor: pointer
   &:before
@@ -231,6 +232,7 @@
     color: $button-background-hover-blue
   
 .btn-next-story-nav
+  width: 10%
   color: white
   cursor: pointer
   &:before
