--- a/src/sa_web/static/css/default.css
+++ b/src/sa_web/static/css/default.css
@@ -1327,42 +1327,39 @@ select {
   padding: 1em;
 =======
 /* Story bar styles */
-/* line 225, ../sass/_buttons.sass */
+/* line 224, ../sass/_buttons.sass */
 .btn-previous-story-nav {
+  width: 10%;
   color: white;
   cursor: pointer;
-  float: left;
-  width: 10%;
 }
-/* line 230, ../sass/_buttons.sass */
+/* line 228, ../sass/_buttons.sass */
 .btn-previous-story-nav:before {
   font-size: 3.3em;
   content: "";
 }
-/* line 233, ../sass/_buttons.sass */
+/* line 231, ../sass/_buttons.sass */
 .btn-previous-story-nav:hover {
   color: #93b7c9;
 }
 
-/* line 236, ../sass/_buttons.sass */
+/* line 234, ../sass/_buttons.sass */
 .btn-next-story-nav {
+  width: 10%;
   color: white;
   cursor: pointer;
-  float: right;
-  width: 10%;
-  text-align: right;
 }
-/* line 242, ../sass/_buttons.sass */
+/* line 238, ../sass/_buttons.sass */
 .btn-next-story-nav:before {
   font-size: 3.3em;
   content: "";
 }
-/* line 245, ../sass/_buttons.sass */
+/* line 241, ../sass/_buttons.sass */
 .btn-next-story-nav:hover {
   color: #93b7c9;
 }
 
-/* line 248, ../sass/_buttons.sass */
+/* line 244, ../sass/_buttons.sass */
 .story-nav-disabled {
   visibility: hidden;
 }
@@ -2538,11 +2535,11 @@ a.auth-inline {
   overflow: hidden;
 }
 /* line 263, ../sass/_content.sass */
-.place-story-bar h5 {
-  float: left;
+.place-story-bar .story-tagline {
   width: 80%;
+  padding-left: 10px;
+  padding-right: 10px;
   font-family: "Roboto", sans-serif;
-  display: inline;
   margin-bottom: 0;
 }
 
