--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -37,23 +37,25 @@
 
   <!-- Google WebFonts -->
   <link href='//fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
-  <link href='https://fonts.googleapis.com/css?family=Alegreya+Sans' rel='stylesheet' type='text/css'>
+  <link href='//fonts.googleapis.com/css?family=Alegreya+Sans' rel='stylesheet' type='text/css'>
 
-  {% if settings.DEBUG %}
+  {% compress css %}
+  <link rel="stylesheet" href="{{ STATIC_URL }}css/normalize.css">
   <link rel="stylesheet" href="{{ STATIC_URL }}css/leaflet-sidebar.css">
   <link rel="stylesheet" href="{{ STATIC_URL }}css/default.css?deployed_at={{ settings.LAST_DEPLOY_DATE|urlencode:'' }}">
-
   <!-- jQuery date-time picker plugin -->
   <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.datetimepicker.css">
-  {% else %}
-  <link rel="stylesheet" href="{{ STATIC_URL }}dist/bundle.css"></link>
-  {% endif %}
-  {% compress css %}
   <link rel="stylesheet" type="text/x-scss" href="{{ STATIC_URL }}scss/default.scss" />
   {% endcompress %}
 
   <!-- Flavor's Custom Stylesheet -->
-  <link rel="stylesheet" href="{{ config.static_url }}css/custom.css?deployed_at={{ settings.LAST_DEPLOY_DATE|urlencode:'' }}">
+  <!--  -->
+  <!-- NOTE: -->
+  <!-- The following CSS file is unable to be processed by django compressor
+  because config is accessed through views.py, which requires an HTTP request.
+  However, a request is simply not generated when using manage.py -->
+  <!--  -->
+  <link rel="stylesheet" href="{{ config.static_url }}css/custom.css">
 
 
   <link rel="profile" href="//gmpg.org/xfn/11" />
@@ -183,43 +185,38 @@
   {% endif %}
 
   {% if settings.MAPBOX_TOKEN %}
-  <link href="https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.2/mapbox-gl.css" rel='stylesheet' />
-  <script src="https://api.tiles.mapbox.com/mapbox-gl-js/v0.11.2/mapbox-gl.js"></script>
-  <script src="{{STATIC_URL}}libs/leaflet-mapbox-gl.js"></script>
+  <link href="//api.tiles.mapbox.com/mapbox-gl-js/v0.11.2/mapbox-gl.css" rel='stylesheet' />
+  <script src="//api.tiles.mapbox.com/mapbox-gl-js/v0.11.2/mapbox-gl.js"></script>
+  <script src="{{ STATIC_URL }}libs/leaflet-mapbox-gl.js"></script>
   {% endif %}
 
   {% block cdn_load %}{% endblock %}
 
-  {% if settings.DEBUG %}
-  <script src="{{STATIC_URL}}libs/underscore.js"></script>
-  <script src="{{STATIC_URL}}libs/backbone.js"></script>
-  <script src="{{STATIC_URL}}libs/backbone.marionette.js"></script>
-  <script src="{{STATIC_URL}}libs/handlebars-v3.0.3.js"></script>
-  <script src="{{STATIC_URL}}libs/moment-with-locales.min.js"></script>
-  <script src="{{STATIC_URL}}libs/json2.js"></script>
-  <script src="{{STATIC_URL}}libs/binaryajax.js"></script>
-  <script src="{{STATIC_URL}}libs/exif.js"></script>
-  <script src="{{STATIC_URL}}libs/load-image.js"></script>
-  <script src="{{STATIC_URL}}libs/canvas-to-blob.js"></script>
-  <script src="{{STATIC_URL}}libs/spin.min.js"></script>
-  <script src="{{STATIC_URL}}libs/gatekeeper.js"></script>
-  <script src="{{STATIC_URL}}libs/swag.min.js"></script>
-  <script src="{{STATIC_URL}}libs/jquery.scrollTo.js"></script>
+  {% compress js %}
+  <script src="{{ STATIC_URL }}libs/underscore.js"></script>
+  <script src="{{ STATIC_URL }}libs/backbone.js"></script>
+  <script src="{{ STATIC_URL }}libs/backbone.marionette.js"></script>
+  <script src="{{ STATIC_URL }}libs/handlebars-v3.0.3.js"></script>
+  <script src="{{ STATIC_URL }}libs/moment-with-locales.min.js"></script>
+  <script src="{{ STATIC_URL }}libs/json2.js"></script>
+  <script src="{{ STATIC_URL }}libs/binaryajax.js"></script>
+  <script src="{{ STATIC_URL }}libs/exif.js"></script>
+  <script src="{{ STATIC_URL }}libs/load-image.js"></script>
+  <script src="{{ STATIC_URL }}libs/canvas-to-blob.js"></script>
+  <script src="{{ STATIC_URL }}libs/spin.min.js"></script>
+  <script src="{{ STATIC_URL }}libs/gatekeeper.js"></script>
+  <script src="{{ STATIC_URL }}libs/swag.min.js"></script>
+  <script src="{{ STATIC_URL }}libs/jquery.scrollTo.js"></script>
 
-  <script src="{{STATIC_URL}}js/utils.js"></script>
-  <script src="{{STATIC_URL}}js/template-helpers.js"></script>
+  <script src="{{ STATIC_URL }}js/utils.js"></script>
+  <script src="{{ STATIC_URL }}js/template-helpers.js"></script>
   <!-- https://github.com/openplans/handlebars-helpers -->
   <!-- jQuery date-time picker plugin -->
   <script src="{{ STATIC_URL }}libs/jquery.datetimepicker.full.min.js"></script>
-  <script src="{{STATIC_URL}}libs/handlebars-helpers.js"></script>
-  <script src="{{STATIC_URL}}libs/leaflet.argo.js"></script>
+  <script src="{{ STATIC_URL }}libs/handlebars-helpers.js"></script>
+  <script src="{{ STATIC_URL }}libs/leaflet.argo.js"></script>
   <script src="{{STATIC_URL}}libs/esri-leaflet.js"></script>
-  <script src="{{STATIC_URL}}libs/leaflet.sidebar.js"></script>
-  {% else %}
-  <!--   TODO: build libraries with npm instead of bower -->
-  <script src="{{STATIC_URL}}dist/lib-bundle.js?ver=0.6.4"></script>
-  <script src="{{STATIC_URL}}dist/preload-bundle.js?ver=0.6.4"></script>
-  {% endif %}
+  <script src="{{ STATIC_URL }}libs/leaflet.sidebar.js"></script>
 
   <script>
     moment.locale('{{LANGUAGE_CODE}}');
@@ -271,40 +268,39 @@
     }
   </script>
 
-  {% if settings.DEBUG %}
-  <script src="{{STATIC_URL}}js/handlebars-helpers.js"></script>
-  <script src="{{STATIC_URL}}js/models.js"></script>
-  <script src="{{STATIC_URL}}js/views/pages-nav-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/auth-nav-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/activity-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/app-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/layer-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/basic-layer-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/map-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/support-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/survey-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/place-detail-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/landmark-detail-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/landmark-survey-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/place-form-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/place-list-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/place-counter-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/geocode-address-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/geocode-address-place-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/sidebar-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/legend-view.js"></script>
-  <script src="{{STATIC_URL}}js/views/gis-legend-view.js"></script>
-  <script src="{{STATIC_URL}}js/routes.js"></script>
-  {% else %}
-  <script src="{{STATIC_URL}}dist/bundle.js?ver=0.6.2"></script>
-  {% endif %}
+  <script src="{{ STATIC_URL }}js/handlebars-helpers.js"></script>
+  <script src="{{ STATIC_URL }}js/models.js"></script>
+  <script src="{{ STATIC_URL }}js/views/pages-nav-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/auth-nav-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/activity-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/app-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/layer-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/basic-layer-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/map-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/support-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/survey-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/place-detail-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/landmark-detail-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/landmark-survey-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/place-form-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/place-list-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/place-counter-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/geocode-address-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/geocode-address-place-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/sidebar-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/legend-view.js"></script>
+  <script src="{{ STATIC_URL }}js/views/gis-legend-view.js"></script>
+  <script src="{{ STATIC_URL }}js/routes.js"></script>
+  {% endcompress %}
 
+ 
   <script src="{{API_ROOT}}users/current?format=jsonp&callback=bootstrapCurrentUser"></script>
   <script src="{{API_ROOT}}utils/session-key?format=jsonp&callback=setApiSessionCookie"></script>
 
   {% handlebarsjs '(.*)' precompile register_partials %}
   {% handlebarsjs 'pages/*' precompile %}
 
+  {% compress js %}
   <script type="text/javascript">
 //  <!--<script>-->
   (function(S, $){
@@ -353,8 +349,10 @@
   }(Shareabouts, jQuery));
 
   </script>
+  {% endcompress %}
 
   {% if settings.GOOGLE_ANALYTICS_ID %}
+  {% compress js %}
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -365,9 +363,11 @@
     // Set the language-code
     ga('set', 'dimension2', '{{ LANGUAGE_CODE }}');
   </script>
+  {% endcompress %}
   {% endif %}
   {% if settings.CLICKY_ANALYTICS_ID %}
   <a title="Google Analytics Alternative" href="https://clicky.com/{{ settings.CLICKY_ANALYTICS_ID }}"><img alt="Google Analytics Alternative" src="//static.getclicky.com/media/links/badge.gif" border="0" /></a>
+  {% compress js %}
   <script type="text/javascript">
    var clicky_site_ids = clicky_site_ids || [];
    clicky_site_ids.push({{ settings.CLICKY_ANALYTICS_ID }});
@@ -379,6 +379,7 @@
      ( document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0] ).appendChild( s );
    })();
   </script>
+  {% endcompress %}
 
   <noscript>
     <p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/{{ settings.CLICKY_ANALYTICS_ID }}ns.gif" />
