--- a/src/sa_web/static/sass/_buttons.sass
+++ b/src/sa_web/static/sass/_buttons.sass
@@ -223,23 +223,23 @@
 /* Story bar styles */
 .btn-previous-story-nav
   width: 10%
-  color: white
+  color: $button-background-hover-blue
   cursor: pointer
   &:before
     font-size: 3.3em
     content: $button-left-arrow
   &:hover
-    color: $button-background-hover-blue
+    color: $button-background-blue
   
 .btn-next-story-nav
   width: 10%
-  color: white
+  color: $button-background-hover-blue
   cursor: pointer
   &:before
     font-size: 3.3em
     content: $button-right-arrow
   &:hover
-    color: $button-background-hover-blue
+    color: $button-background-blue
 
 .story-nav-disabled
   visibility: hidden
