--- a/src/sa_web/static/sass/_content.sass
+++ b/src/sa_web/static/sass/_content.sass
@@ -253,7 +253,7 @@ a.auth-inline
 
 /* place detail view story bar */
 .place-story-bar
-  background-color: $button-background-lightblue
+  background-color: LightYellow
   padding: 8px
   border-radius: 3px
   margin-top: 10px
@@ -261,6 +261,7 @@ a.auth-inline
   font-family: FontAwesome
   overflow: hidden
   .story-tagline
+    text-align: center
     width: 80%
     padding-left: 10px
     padding-right: 10px
