various ux tweaks to place detail view

--- a/src/sa_web/static/sass/_content.sass
+++ b/src/sa_web/static/sass/_content.sass
@@ -253,7 +253,7 @@ a.auth-inline
 
 /* place detail view story bar */
 .place-story-bar
-  background-color: $button-background-lightblue
+  background-color: LightYellow
   padding: 8px
   border-radius: 3px
   margin-top: 10px
