--- a/src/sa_web/static/scss/_legend.scss
+++ b/src/sa_web/static/scss/_legend.scss
@@ -2,7 +2,7 @@
 // MASTER LEGEND - SELECTORS
 // ################################
 
-#master-legend {
+/* #master-legend {
     overflow: visible;
     padding-left: unset;
     padding-right: unset;
@@ -10,7 +10,7 @@
 
     //display: none;
     .unstyled-list {}
-}
+} */
 
 // All layers in the Master Legend list
 
@@ -90,17 +90,16 @@
     }
 }
 
-#master-legend {
-    .layer-type-list {
-        font-size: 0.875em;
-    }
 
-    .layer-type-title label {
-        vertical-align: middle;
-        margin-right: 8px;
-        font-size: 1.33em;
-        letter-spacing: 1px;
-    }
+.layer-type-list {
+    font-size: 0.875em;
+}
+
+.layer-type-title label {
+    vertical-align: middle;
+    margin-right: 8px;
+    font-size: 1.33em;
+    letter-spacing: 1px;
 }
 
 .layer-type-title input {
@@ -110,42 +109,26 @@
     letter-spacing: 1px;
 }
 
-#master-legend {
-    .shareabouts-layer-li {
-        font-size: 1.3em;
-        letter-spacing: 1.4px;
-    }
 
-    .layer-type-title:active label:hover, .shareabouts-layer-li:active a {
-        color: $hover-highlight-blue;
-    }
-
-    .map-layer-list {
-        margin-bottom: 0.5em;
-        font-size: 0.75em;
-    }
-
-    .layer-type-li label, .shareabouts-layer-li a {
-        cursor: pointer;
-        position: relative;
-        z-index: 20;
-        font-weight: normal;
-        text-decoration: none;
-        text-transform: none;
-        font-family: $default-font-family;
-    }
-
-    .shareabouts-layer-title {
-        font-size: 1.4em;
-        cursor: pointer;
-        width: 1em;
-        height: auto;
-        z-index: 20;
-        text-transform: none;
-        vertical-align: top;
-        margin-right: 8px;
-    }
+.layer-type-title:active label:hover, .shareabouts-layer-li:active a {
+    color: $hover-highlight-blue;
 }
+
+.map-layer-list {
+    margin-bottom: 0.5em;
+    font-size: 0.75em;
+}
+
+.layer-type-li label, .shareabouts-layer-li a {
+    cursor: pointer;
+    position: relative;
+    z-index: 20;
+    font-weight: normal;
+    text-decoration: none;
+    text-transform: none;
+    font-family: $default-font-family;
+}
+
 
 //#master-legend .layer-type-title label {
 //color: #ddd;
@@ -169,22 +152,14 @@
 //box-shadow: 0 0 0 2px $button-color-white;
 //}
 
-//#master-legend {
+//
 //display: block;
 //padding: 1em;
 //-webkit-box-sizing: border-box;
 //-moz-box-sizing: border-box;
 //box-sizing: border-box;
 //}
-@media screen and (min-width: 40.063em) {
-    .active #master-legend {
-        height: 100%;
-        width: 16em;
-        top: 0;
-        right: 0;
-        overflow: auto;
-    }
-}
+
 
 // Shareabouts layers
 
@@ -194,16 +169,52 @@
 // // *}
 
 .master-layer-list {
+    padding-left: unset;
+    list-style-type: none;
     padding-bottom: 0;
     padding-top: 0;
-    margin-top: 0.5;
+    margin-top: 0.5em;
     margin-bottom: 0;
+
+    .shareabouts-layer-li {
+        font-size: 16px;
+        letter-spacing: 1.4px;
+    }
+    .unstyled-list {
+        overflow: visible;
+        padding-left: unset;
+        padding-right: unset;
+        padding-top: 10px;
+    }
+    .shareabouts-layer-title {
+        font-size: 22px;
+        cursor: pointer;
+        width: 1em;
+        height: auto;
+        z-index: 20;
+        text-transform: none;
+        vertical-align: top;
+        margin-right: 8px;
+    }
+    .shareabouts-layer-li,
+    .shareabouts-layer-title {
+        padding-bottom: 0;
+        padding-top: 0;
+        margin-top: 0;
+        margin-bottom: .3em;
+        float: none;
+    }
+    .nested-legend-list {
+        margin: 0;
+    }
 }
 
-/* All layers in the Master Legend list */
-.master-layer-list .unstyled-list {
-    overflow: visible;
-    padding-left: unset;
-    padding-right: unset;
-    padding-top: 10px;
+@media screen and (min-width: 40.063em) {
+    .active {
+        height: 100%;
+        /*width: 16em;*/
+        top: 0;
+        right: 0;
+        overflow: auto;
+    }
 }
