styled the closing arrow in the leaflet sidebar to have a background

--- a/src/sa_web/static/scss/_sidebar.scss
+++ b/src/sa_web/static/scss/_sidebar.scss
@@ -42,6 +42,9 @@
 
     .sidebar-close i {
         margin-right: 30px;
+        background: #0074d9;
+        border-radius: 50%;
+        padding: 6px 10px 5px 6px;
     }
 }
 
