--- a/src/sa_web/static/scss/_sidebar.scss
+++ b/src/sa_web/static/scss/_sidebar.scss
@@ -39,12 +39,14 @@
 
 .sidebar-header {
     margin: -10px -10px 0;
-
-    .sidebar-close i {
-        margin-right: 30px;
-        background: #0074d9;
-        border-radius: 50%;
-        padding: 6px 10px 5px 6px;
+    .sidebar-close {
+        z-index: 1;
+        i {
+            margin-right: 30px;
+            background: #0074d9;
+            border-radius: 50%;
+            padding: 6px 10px 5px 6px;
+        }
     }
 }
 
