--- a/src/sa_web/static/scss/_map.scss
+++ b/src/sa_web/static/scss/_map.scss
@@ -2,6 +2,10 @@
 // MAP - SELECTORS
 // ################################
 
+.cartodb-logo {
+    display: none !important;
+}
+
 #map-container {
     position: relative;
     background: $button-background-lightblue;
