--- a/src/sa_web/templates/base.html
+++ b/src/sa_web/templates/base.html
@@ -44,6 +44,8 @@
 
   <!-- jQuery date-time picker plugin -->
   <link rel="stylesheet" href="{{ STATIC_URL }}css/jquery.datetimepicker.css">
+  <!-- jQuery Accordion plugin style -->
+  <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/jquery.accordion.css">
   {% else %}
   <link rel="stylesheet" href="{{ STATIC_URL }}dist/bundle.css"></link>
   {% endif %}
@@ -201,6 +203,8 @@
   <script src="{{STATIC_URL}}libs/gatekeeper.js"></script>
   <script src="{{STATIC_URL}}libs/swag.min.js"></script>
   <script src="{{STATIC_URL}}libs/jquery.scrollTo.js"></script>
+  <!-- jQuery Accordion plugin scriopt -->
+  <script type="text/javascript" src="{{STATIC_URL}}libs/jquery.accordion.js"></script>
 
   <script src="{{STATIC_URL}}js/utils.js"></script>
   <script src="{{STATIC_URL}}js/template-helpers.js"></script>
@@ -348,7 +352,15 @@
   }(Shareabouts, jQuery));
 
   </script>
-
+  <!-- jQuery Accordion plugin usage -->
+  <script type="text/javascript">
+      $(document).ready(function() {
+          $('#accordion-layers [data-accordion]').accordion({
+              singleOpen: false
+          });
+          console.log("Loaded");
+      });
+  </script>
   {% if settings.GOOGLE_ANALYTICS_ID %}
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
