--- a/src/sa_web/static/scss/_legend.scss
+++ b/src/sa_web/static/scss/_legend.scss
@@ -20,12 +20,8 @@
     letter-spacing: 1px;
 }
 
-.layer-type-grouping-list {
-    margin-left: 10px;
-
-    label {
-        font-size: 0.5em;
-    }
+.layer-type-grouping-list label {
+    font-size: 0.5em;
 }
 
 // allows hover to be positioned on the 'layer-type-description'
