--- a/src/sa_web/static/scss/_sidebar.scss
+++ b/src/sa_web/static/scss/_sidebar.scss
@@ -36,18 +36,29 @@
 }
 
 /*---- leaflet side bar overrides ----*/
-
-.sidebar-header {
-    margin: -10px -10px 0;
-    .sidebar-close {
-        z-index: 1;
-        i {
-            margin-right: 30px;
-            background: #0074d9;
-            border-radius: 50%;
-            padding: 6px 10px 5px 6px;
+.sidebar-pane {
+    padding: 34px 0 0 10px;
+    .sidebar-header {
+        margin: -34px 0 0 -10px;
+        padding: 0 0 0 10px;
+        position: absolute;
+        width: 100%;
+        z-index: 99;
+        box-sizing: border-box;
+        .sidebar-close {
+            z-index: 1;
+            i {
+                margin-right: 30px;
+                background: #0074d9;
+                border-radius: 50%;
+                padding: 6px 10px 5px 6px;
+            }
         }
     }
+    #gis-layers {
+        margin-left: -10px;
+    }
+
 }
 
 //#side-bar header {
