--- a/src/sa_web/static/scss/_media.scss
+++ b/src/sa_web/static/scss/_media.scss
@@ -90,7 +90,7 @@
 
     // Header
     #site-header {
-        background: url(images/lightpaperfibers.png);
+        background: url(../css/images/lightpaperfibers.png);
         padding-left: 1em;
         overflow: visible;
         height: 4em;
@@ -203,7 +203,7 @@
     }
 
     .sign-in-menu {
-        background: url(images/lightpaperfibers.png);
+        background: url(../css/images/lightpaperfibers.png);
         border-radius: 3px;
         box-shadow: (-0.25em) 0.25em 0 $opacity-low-black;
         width: 18em;
@@ -562,7 +562,7 @@
     // Footer
     #colophon {
         color: $button-background-blue;
-        background: url(images/lightpaperfibers.png);
+        background: url(../css/images/lightpaperfibers.png);
         font-size: 1em;
         position: absolute;
         top: auto;
@@ -609,17 +609,17 @@
 // High Resolution Displays
 @media only screen and (min--moz-device-pixel-ratio: 2), only screen and (-o-min-device-pixel-ratio: 2 / 1), only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
     .share-twitter a {
-        background-image: url(images/twitter-64.png);
+        background-image: url(../css/images/twitter-64.png);
         background-size: contain;
     }
 
     .share-facebook a {
-        background-image: url(images/facebook-64.png);
+        background-image: url(../css/images/facebook-64.png);
         background-size: contain;
     }
 
     .locate-me {
-        background-image: url(images/locate-me@2x.png);
+        background-image: url(../css/images/locate-me@2x.png);
         background-size: contain;
     }
 }
