update SCSS files with story bar styles imported from gtopenspace flavor

--- a/src/sa_web/static/scss/_buttons.scss
+++ b/src/sa_web/static/scss/_buttons.scss
@@ -280,3 +280,37 @@
         cursor: pointer;
     }
 }
+
+/* Story bar styles */
+.btn-previous-story-nav {
+    width: 10%;
+    color: $button-background-hover-blue;
+    cursor: pointer;
+    &:before {
+        font-size: 3.3em;
+        content: $button-left-arrow;
+    }
+
+    &:hover {
+        color: $button-background-blue;
+    }
+}
+  
+.btn-next-story-nav {
+    width: 10%;
+    color: $button-background-hover-blue;
+    cursor: pointer;
+    &:before {
+        font-size: 3.3em;
+        content: $button-right-arrow;
+    }
+
+    &:hover {
+        color: $button-background-blue;
+    }
+}
+
+.story-nav-disabled {
+    visibility: hidden;
+}
+
